--- a/assets/php/php.ini
+++ b/assets/php/php.ini
@@ -2,4 +2,4 @@ extension_dir="C:/Program Files/PHP/ext"
 extension=php_pgsql.dll
 
 display_errors = On
-error_reporting = ~E_ALL
+# error_reporting = ~E_ALL
