--- a/assets/php/php.ini
+++ b/assets/php/php.ini
@@ -1,5 +1,5 @@
 extension_dir="C:/Program Files/PHP/ext"
 extension=php_pgsql.dll
 
-display_errors = On
-error_reporting = E_ALL #~E_ALL
+display_errors = Off
+error_reporting = ~E_ALL
